Adding Unity test framework to code. Should be making use of git submodule

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,8 @@ project(yahtzee)
 set(CMAKE_BUILD_TYPE Release)
 set(CMAKE_C_COMPILER "gcc")
 
+include(CTest)
+add_subdirectory(external)
+add_subdirectory(tst)
+
 add_executable(yahtzee src/yahtzee.c)
